# sinabs-exodus

./: .gitattributes  .gitignore  CITATION.cff  ChangeLog  Gradient_analysis.ipynb  LICENSE  MANIFEST.in  Pipfile  README.md  example.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_graph.py
.github/workflows/: publish-to-test.yml  python-package.yml  tests.yml  tests_cuda116.yml  tests_cuda118.yml
csrc/cuda/: convKernels.h  exodusKernels.cu  slayerKernels.cu  spikeKernels.h
cuda/: bindings.cu  experimental_kernels.h  leaky_kernels.h  lif_kernels.h  spikeKernels.h
data/22-ci-pipeline-is-not-working/: coverage.xml
data/26-prepare-new-release-of-sinabs-exodus/: coverage.xml
data/8-automated-cicd/: coverage.xml
data/8-automated-cicd-1/: coverage.xml
data/develop/: coverage.xml
data/main/: coverage.xml
images/: Dockerfile
images/cuda11.6/: Dockerfile
images/cuda11.6/resources/: dependencies.yml
images/cuda11.8/: Dockerfile
images/cuda11.8/resources/: dependencies.yml
images/resources/: clean.yml
sinabs-slayer/: example.py
sinabs-slayer/tests/: test_kernels.py
sinabs/exodus/: __init__.py  _version.py  conversion.py  kernels.py  leaky.py  psp.py  spike.py  version.py
sinabs/exodus/layers/: __init__.py  (+4 more)
sinabs/slayer/: leaky.py  psp.py  spike.py
src/cuda/: slayerKernels.cu  spikeKernels.h
tests/: compare_efficiency.py  compare_efficiency_spike_methods.py  test_backend_network.py  test_backends.py  test_conversion.py  test_exp_leak.py  test_iaf.py  test_kernels.py  test_leak_functions.py  test_lif.py  test_spike_functions.py
(+14 files in other folders)
