[metadata]
name = sinabs-exodus
author = SynSense (formerly AiCTX)
author_email = sinabs@synsense.ai
long_description = file: README.md
long_description_content_type = text/markdown
summary = Efficient training and inference on GPU for sinabs spiking neural network simulator.
homepage = sinabs.ai
project_urls =
    Source code = https://github.com/synsense/sinabs-exodus
    Documentation = https://readthedocs.org/projects/sinabs/
license = GNU AGPLv3
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Programming Language :: Python :: 3
keywords =
    spiking neural networks
    machine learning
    SNN
    GPU

[files]
packages = sinabs.exodus

[versioneer]
VCS = git
style = pep440-pre
versionfile_source = sinabs/exodus/_version.py
tag_prefix = v
parentdir_prefix = exodus-

